# fairpro

./: LICENSE  README.md  fairpro.py  fairpro_sp.json  generate.py  pyproject.toml
data/: fairpro_prompts.csv  prompts_context.txt  prompts_occupations.txt  prompts_occupations_rewrite.txt  prompts_simple.txt
