[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fairpro"
version = "0.0.1a1"
description = "System prompt generation framework for socially-fair text-to-image generation"
authors = [
  {name = "NaHyeon Park", email = "julia19@kaist.ac.kr"},
  {name = "Namin An", email = "naminan@kaist.ac.kr"},
  {name = "Kunhee Kim", email = "kunhee.kim@kaist.ac.kr"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9,<3.13"
keywords = ["fairness", "text-to-image", "bias", "system-prompt", "LVLM", "diffusion"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dependencies = [
  "torch>=2.0.0",
  "torchvision>=0.15.0",
  "accelerate>=0.24.0",
  "diffusers>=0.25.0",
  "transformers[sentencepiece]==4.56.1",
  "safetensors>=0.4.0",
  "huggingface-hub>=0.19.0",
  "xformers>=0.0.20",
  "click>=8.0.0",
  "streamlit>=1.28.0",
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "tqdm>=4.65.0",
  "jsonlines",
  "qwen_vl_utils",
  "matplotlib",
  "cupy-cuda11x>=13.6.0",
]

[project.urls]
Homepage = "https://fairpro-t2i.github.io"
Repository = "https://github.com/nahyeonkaty/fairpro"
Documentation = "https://github.com/nahyeonkaty/fairpro#readme"
Issues = "https://github.com/nahyeonkaty/fairpro/issues"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
  "mypy>=1.0.0",
]

[tool.setuptools]
py-modules = ["fairpro", "generate"]

[tool.setuptools.package-data]
"*" = ["data/*", "assets/*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E402"]  # Allow module level imports not at top of file (needed for CUDA setup)

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true